2009-10-25  Vladimir Tzankov  <vtzankov@gmail.com>

	[WIN32_THREADS]: use thread safe C run-time (CRT)
	* xthread.d (xthread_create): use _beginthreadex() for thread creation.
	close returned handle immediately in order to prevent leaks
	(xthread_exit): use _endthreadex() - releases per thread allocated
	resources
	(THREADPROC_SIGNATURE): add. specify correct calling convention and
	return type of start thread procedure
	* spvw.d (mt_main_actions): use THREADPROC_SIGNATURE
	* zthread.d (thread_stub): ditto

2009-10-25  Vladimir Tzankov  <vtzankov@gmail.com>

	* control.d (make_variable_frame) [MULTITHREAD]: do not allocate per
	thread value cells for locally declared special variables
	* eval.d (interpret_bytecode_) [MULTITHREAD]: ditto for cod_bind -
	the code here was plain wrong

2009-10-21  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: handle SIGWINCH signal
	* spvw_sigwinch.d (update_linelength): update SYS::*PRIN-LINELENGTH*
	global value
	* spvw.d (main): set SYS::*PRIN-LINELENGTH* in MT builds
	(signal_handler_thread): handle SIGWINCH

2009-10-21  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_fault.d (LOCK_PAGE_CACHE, UNLOCK_PAGE_CACHE): acquire/release
	spinlock guarding physical page cache
	(handle_fault, handle_fault_range): use them

2009-10-20  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (jmpl_value) [MULTITHREAD]: make it per thread and export
	to modules
	* spvw.d: do not define jmpl_value in MT builds

2009-10-19  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script): fix the non-UNICODE build
	Reported by Angel Popov <angelpopov@yahoo.com>

2009-10-16  Sam Steingold  <sds@gnu.org>

	* configure.in (AC_INIT): use m4_esyscmd instead of esyscmd

2009-10-15  Sam Steingold  <sds@gnu.org>

	* built.d (built_flags) [DYNAMIC_FFI]: add libffcall version based
	on LIBFFCALL_VERSION

2009-10-15  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d [MULTITHREAD]: allow USE_CUSTOM_TLS=2 on 64bit builds.